VXIPNP/WinNT/include/age1960.h



    ViStatus _VI_FUNC age1960_cellBand
    (ViSession  instrumentHandle,
     ViInt16    servingCellBandCell,
     ViInt16    servingCellBand);


    ViStatus _VI_FUNC age1960_TCHBand
    (ViSession  instrumentHandle,
     ViInt16    TCHBand);


    ViStatus _VI_FUNC age1960_manualBand
    (ViSession  instrumentHandle,
     ViInt16    manaulBand);


    ViStatus _VI_FUNC age1960_operatingMode
    (ViSession  instrumentHandle,
     ViInt16    operatingMode);


    ViStatus _VI_FUNC age1960_BATable
    (ViSession  instrumentHandle,
     ViInt16    BATableCell,
     ViInt32    BATableArraySize,
     ViInt32    _VI_FAR BATableArray[],
     ViInt16    BATableBand);


    ViStatus _VI_FUNC age1960_burstType
    (ViSession  instrumentHandle,
     ViInt16    burstType);


    ViStatus _VI_FUNC age1960_amplitudeOffset
    (ViSession  instrumentHandle,
     ViReal64    _VI_FAR frequencyArray[],
     ViReal64    _VI_FAR offsetArray[],
     ViInt32     ampOffsetItems);


    ViStatus _VI_FUNC age1960_cellPower
    (ViSession  instrumentHandle,
     ViInt16    cellPowerCell,
     ViReal64   cellPower,
     ViReal64   cellPowerDelta);


    ViStatus _VI_FUNC age1960_channelMode
    (ViSession	instrumentHandle,
     ViInt16	channelMode);


    ViStatus _VI_FUNC age1960_FACCHSignaling
    (ViSession	instrumentHandle,
     ViBoolean	facchState);


    ViStatus _VI_FUNC age1960_integrityMessage
    (ViSession  instrumentHandle,
     ViInt32    integrityCode,
     ViPString  integrityMessage);


    ViStatus _VI_FUNC age1960_measurementTimeout
    (ViSession  instrumentHandle,
     ViInt16    timeoutMeasFcn,
     ViReal64   timeoutSec,
     ViBoolean  timeoutOnOff);


    ViStatus _VI_FUNC age1960_confTXPower
    (ViSession  instrumentHandle,
     ViInt32    TXPowerMeasCount,
     ViInt16    TXPowerTrigSource,
     ViReal64   TXPowerTrigDelay,
     ViBoolean  TXPowerTrigQual,
     ViReal64   TXPowerMaxTime);


    ViStatus _VI_FUNC age1960_confDynPower
    (ViSession  instrumentHandle,
     ViInt32    DynPowerMeasCount,
     ViReal64   DynPowerExpMaxDiff,
     ViReal64   DynPowerMaxTime);


    ViStatus _VI_FUNC age1960_confPowerVsTime
    (ViSession  instrumentHandle,
     ViInt32    pvsTimeMeasCount,
     ViInt16    pvsTimeTrigSource,
     ViReal64   pvsTimeTrigDelay,
     ViInt16    pvsTimeSync,
     ViInt32    pvsTimePoints,
     ViReal64   pvsTimeOffsets[],
     ViReal64   pvsTimeMaxTime);


    ViStatus _VI_FUNC age1960_confPFER
    (ViSession  instrumentHandle,
     ViInt32    PFERMeasCount,
     ViInt16    PFERTrigSource,
     ViReal64   PFERTrigDelay,
     ViBoolean  PFERTrigQual,
     ViInt16    PFERSync,
     ViReal64   PFERMaxTime);


    ViStatus _VI_FUNC age1960_confORFS
    (ViSession  instrumentHandle,
     ViInt32    ORFSSwMeasCount,
     ViInt32    ORFSModMeasCount,
     ViInt16    ORFSTrigSource,
     ViReal64   ORFSTrigDelay,
     ViInt32    ORFSSwPoints,
     ViReal64   ORFSSwFreqs[],
     ViInt32    ORFSModPoints,
     ViReal64   ORFSModFreqs[],
     ViReal64   ORFSMaxTime);


    ViStatus _VI_FUNC age1960_confFastBER
    (ViSession  instrumentHandle,
     ViInt32    FBERMeasCount,
     ViInt32    FBERManualDelay,
     ViBoolean  FBERAutoDelay,
     ViBoolean  FBERSignallingControl,
     ViReal64   FBERHoldoffTime,
     ViReal64   FBERMaxTime);


    ViStatus _VI_FUNC age1960_confBER
    (ViSession  instrumentHandle,
     ViInt32    BERMeasCount,
     ViInt16    BERMeasType,
     ViInt32    BERManualDelay,
     ViBoolean  BERAutoDelay,
     ViBoolean  BERSignallingControl,
     ViReal64   BERHoldoffTime,
     ViReal64   BERMaxTime);


    ViStatus _VI_FUNC age1960_confAAudio
    (ViSession  instrumentHandle,
     ViInt32    AAudioMeasCount,
     ViReal64   AAudioExpVolt,
     ViReal64   AAudioFiltFreq,
     ViBoolean  AAudioFiltState,
     ViReal64   AAudioMaxTime);


    ViStatus _VI_FUNC age1960_confDAudio
    (ViSession  instrumentHandle,
     ViInt32    DAudioMeasCount,
     ViReal64   DAudioFiltFreq,
     ViBoolean  DAudioFiltState,
     ViReal64   DAudioMaxTime);


    ViStatus _VI_FUNC age1960_confIQTuning
    (ViSession  instrumentHandle,
     ViInt32    IQTMeasCount,
     ViInt16    IQTTrigSource,
     ViReal64   IQTTrigDelay,
     ViInt16    IQTRefOffsetFrequency,
     ViBoolean  IQTSpurFreqState,
     ViReal64   IQTSpurFrequency,
     ViReal64   IQTMaxTime);


    ViStatus _VI_FUNC age1960_confAutoRange
    (ViSession instrumentHandle,
     ViInt16 measFcnToUse,
     ViInt32 tries);


    ViStatus _VI_FUNC age1960_confForMSOriginate
    (ViSession  instrumentHandle);


    ViStatus _VI_FUNC age1960_waitForConnect
    (ViSession  instrumentHandle,
     ViReal64   connectTimeOut);


    ViStatus _VI_FUNC age1960_getCorrectionFreq_Q
    (ViSession  instrumentHandle,
     ViInt16    cell,
     ViPReal64  downlinkFreq,
     ViPReal64  uplinkFreq);


    ViStatus _VI_FUNC age1960_getPresentFreq_Q
    (ViSession  instrumentHandle,
     ViPReal64  downlinkFreq,
     ViPReal64  uplinkFreq,
     ViPReal64  measurementFreq);


    ViStatus _VI_FUNC age1960_getApproxOffset_Q
    (ViSession  instrumentHandle,
     ViReal64   frequency,
     ViPReal64  offset);


    ViStatus _VI_FUNC age1960_UUTLevel_Q
    (ViSession instrumentHandle,
     ViInt16 cell,
     ViPReal64 level);


    ViStatus _VI_FUNC age1960_SACCHReport_Q
    (ViSession instrumentHandle,
     ViBoolean  waitForNewSACCH,
     ViInt32    numberOfReadings,
     ViPReal64  RXLevel,
     ViPReal64  TXLevel,
     ViPReal64  RXQuality,
     ViPReal64  TimingAdvance);


    ViStatus _VI_FUNC age1960_waitForClearHPIB
    (ViSession instrumentHandle,
     ViInt32  timeOut);


    ViStatus _VI_FUNC age1960_useSRQMAV
    (ViSession instrumentHandle,
     ViBoolean useSRQMAV);


    ViStatus _VI_FUNC age1960_useSRQMAV_Q
    (ViSession   instrumentHandle,
     ViPBoolean  useSRQMAV);


    ViStatus _VI_FUNC age1960_PowerVsTimePlot_Q
    (ViSession   instrumentHandle,
     ViInt32     pvsTimePlotArraySize,
     ViPInt32    pvsTimePlotIntegrity,
     ViPReal64   pvsTimePlotMaskFail,
     ViPReal64   pvsTimePlotPower,
     ViPReal64   pvsTimeStartTime,
     ViPReal64   pvsTimeIncrement,
     ViReal64    _VI_FAR pvsTimePlotArray[]);


    ViStatus _VI_FUNC age1960_loopback
    (ViSession 	instrumentHandle,
     ViInt16   	loopbackMode);


    ViStatus _VI_FUNC age1960_currentTA
    (ViSession  instrumentHandle,
     ViString   TAName,
     ViString   TARevision);


    ViStatus _VI_FUNC age1960_currentTA_Q
    (ViSession  instrumentHandle,
     ViPString  TANameQuery,
     ViPString  TARevisionQuery);


    ViStatus _VI_FUNC age1960_currentTAModel_Q
    (ViSession  instrumentHandle,
     ViPString  TAModel);


    ViStatus _VI_FUNC age1960_currentActiveTAP
    (ViSession  instrumentHandle,
     ViString   TAName);


    ViStatus _VI_FUNC age1960_currentActiveTAP_Q
    (ViSession  instrumentHandle,
     ViPString  TANameQuery);


    ViStatus _VI_FUNC age1960_confAFAN
    (ViSession 	instrumentHandle,
     ViInt32 	AFANMeasCount,
     ViBoolean 	AFANSinadDist,
     ViReal64 	AFANFundFreq,
     ViInt16 	AFANFilterType,
     ViReal64 	AFANBPFCntFreq,
     ViInt16 	AFANDetType,
     ViReal64 	AFANPeakVolt,
     ViBoolean 	AFANDeemphasis,
     ViReal64 	AFANExpandorLevel,
     ViReal64 	AFANMaxTime);


    ViStatus _VI_FUNC age1960_fetchAFAN_Q
    (ViSession 	instrumentHandle,
     ViPInt32 	AFANIntegrity,
     ViPReal64 	AFANAvgAudioLevel,
     ViPReal64 	AFANAvgSINAD,
     ViPReal64 	AFANAvgDist);


    ViStatus _VI_FUNC age1960_readAFAN_Q
    (ViSession 	instrumentHandle,
     ViBoolean 	AFANAutoRange,
     ViPInt32 	AFANIntegrity,
     ViPReal64 	AFANAvgAudioLevel,
     ViPReal64 	AFANAvgSINAD,
     ViPReal64 	AFANAvgDist);


    ViStatus _VI_FUNC age1960_confPFER_CIFT
    (ViSession 	instrumentHandle,
     ViBoolean  PFERCIFTState,
     ViReal64   PFERConfidenceLevel,
     ViReal64   PFERPeakPhaseErrorMaxLimit,
     ViReal64   PFERRmsPhaseErrorMaxLimit,
     ViReal64   PFERFrequencyErrorMaxLimit);


    ViStatus _VI_FUNC age1960_confPVTMask
    (ViSession  instrumentHandle,
     ViInt16    PVTMaskForPCS);


    ViStatus _VI_FUNC age1960_confORFSLimitSource
    (ViSession  instrumentHandle,
     ViInt16    limitSource);


    ViStatus _VI_FUNC age1960_confORFSSwitchLimits
    (ViSession  instrumentHandle,
     ViInt16    measurementBand,
     ViInt32    switchingOffsetPoints,
     ViReal64   _VI_FAR switchingLimitsArray[]);


    ViStatus _VI_FUNC age1960_confORFSModLimits
    (ViSession  instrumentHandle,
     ViInt16    measurementBand,
     ViInt32    modulationOffsetPoints,
     ViReal64   _VI_FAR modulationLimitsArray[]);


    ViStatus _VI_FUNC age1960_fetchORFSSummaryPassFail_Q
    (ViSession  instrumentHandle,
     ViPReal64  overallPFSummary,
     ViPReal64  switchingPFSummary,
     ViPReal64  modulationPFSummary);


    ViStatus _VI_FUNC age1960_burstTimingError_Q
    (ViSession  instrumentHandle,
     ViPReal64 	burstTimingError);