VXIPNP/WinNT/include/age1960.bas


Declare Function age1960_cellBand Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal servingCellBandCell As Integer, _
    ByVal servingCellBand As Integer) As Long

Declare Function age1960_TCHBand Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal TCHBand As Integer) As Long

Declare Function age1960_manualBand Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal manaulBand As Integer) As Long

Declare Function age1960_operatingMode Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal operatingMode As Integer) As Long

Declare Function age1960_BATable Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal BATableCell As Integer, _
    ByVal BATableArraySize As Long, _
    ByRef BATableArray As Long, _
    ByVal BATableBand As Integer) As Long

Declare Function age1960_burstType Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal burstType As Integer) As Long

Declare Function age1960_amplitudeOffset Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByRef frequencyArray As Double, _
    ByRef offsetArray As Double, _
    ByVal ampOffsetItems As Long) As Long

Declare Function age1960_cellPower Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal cellPowerCell As Integer, _
    ByVal cellPower As Double, _
    ByVal cellPowerDelta As Double) As Long

Declare Function age1960_channelMode Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal channelMode As Integer) As Long

Declare Function age1960_FACCHSignaling Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal facchState As Integer) As Long

Declare Function age1960_integrityMessage Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal integrityCode As Long, _
    ByVal integrityMessage As String) As Long

Declare Function age1960_measurementTimeout Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal timeoutMeasFcn As Integer, _
    ByVal timeoutSec As Double, _
    ByVal timeoutOnOff As Integer) As Long

Declare Function age1960_confTXPower Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal TXPowerMeasCount As Long, _
    ByVal TXPowerTrigSource As Integer, _
    ByVal TXPowerTrigDelay As Double, _
    ByVal TXPowerTrigQual As Integer, _
    ByVal TXPowerMaxTime As Double) As Long

Declare Function age1960_confDynPower Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal DynPowerMeasCount As Long, _
    ByVal DynPowerExpMaxDiff As Double, _
    ByVal DynPowerMaxTime As Double) As Long

Declare Function age1960_confPowerVsTime Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal pvsTimeMeasCount As Long, _
    ByVal pvsTimeTrigSource As Integer, _
    ByVal pvsTimeTrigDelay As Double, _
    ByVal pvsTimeSync As Integer, _
    ByVal pvsTimePoints As Long, _
    ByRef pvsTimeOffsets As Double, _
    ByVal pvsTimeMaxTime As Double) As Long

Declare Function age1960_confPFER Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal PFERMeasCount As Long, _
    ByVal PFERTrigSource As Integer, _
    ByVal PFERTrigDelay As Double, _
    ByVal PFERTrigQual As Integer, _
    ByVal PFERSync As Integer, _
    ByVal PFERMaxTime As Double) As Long

Declare Function age1960_confORFS Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal ORFSSwMeasCount As Long, _
    ByVal ORFSModMeasCount As Long, _
    ByVal ORFSTrigSource As Integer, _
    ByVal ORFSTrigDelay As Double, _
    ByVal ORFSSwPoints As Long, _
    ByRef ORFSSwFreqs As Double, _
    ByVal ORFSModPoints As Long, _
    ByRef ORFSModFreqs As Double, _
    ByVal ORFSMaxTime As Double) As Long

Declare Function age1960_confFastBER Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal FBERMeasCount As Long, _
    ByVal FBERManualDelay As Long, _
    ByVal FBERAutoDelay As Integer, _
    ByVal FBERSignallingControl As Integer, _
    ByVal FBERHoldoffTime As Double, _
    ByVal FBERMaxTime As Double) As Long

Declare Function age1960_confBER Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal BERMeasCount As Long, _
    ByVal BERMeasType As Integer, _
    ByVal BERManualDelay As Long, _
    ByVal BERAutoDelay As Integer, _
    ByVal BERSignallingControl As Integer, _
    ByVal BERHoldoffTime As Double, _
    ByVal BERMaxTime As Double) As Long

Declare Function age1960_confAAudio Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal AAudioMeasCount As Long, _
    ByVal AAudioExpVolt As Double, _
    ByVal AAudioFiltFreq As Double, _
    ByVal AAudioFiltState As Integer, _
    ByVal AAudioMaxTime As Double) As Long

Declare Function age1960_confDAudio Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal DAudioMeasCount As Long, _
    ByVal DAudioFiltFreq As Double, _
    ByVal DAudioFiltState As Integer, _
    ByVal DAudioMaxTime As Double) As Long

Declare Function age1960_confIQTuning Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal IQTMeasCount As Long, _
    ByVal IQTTrigSource As Integer, _
    ByVal IQTTrigDelay As Double, _
    ByVal IQTRefOffsetFrequency As Integer, _
    ByVal IQTSpurFreqState As Integer, _
    ByVal IQTSpurFrequncy As Double, _
    ByVal IQTMaxTime As Double) As Long
    
Declare Function age1960_confAutoRange Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal measFcnToUse As Integer, _
    ByVal tries As Long) As Long

Declare Function age1960_confForMSOriginate Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long) As Long

Declare Function age1960_waitForConnect Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal connectTimeOut As Double) As Long

Declare Function age1960_getCorrectionFreq_Q Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal cell As Integer, _
    ByRef downlinkFreq As Double, _
    ByRef uplinkFreq As Double) As Long

Declare Function age1960_getPresentFreq_Q Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByRef downlinkFreq As Double, _
    ByRef uplinkFreq As Double, _
    ByRef measurementFreq As Double) As Long
    
Declare Function age1960_getApproxOffset_Q Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal frequency As Double, _
    ByRef offset As Double) As Long

Declare Function age1960_UUTLevel_Q Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal cell As Integer, _
    ByRef level As Double) As Long
    
Declare Function age1960_SACCHReport_Q Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal waitForNewSACCH As Integer, _
    ByVal numberOfReadings As Long, _
    ByRef RXLevel As Double, _
    ByRef TXLevel As Double, _
    ByRef RXQuality As Double, _
    ByRef TimingAdvance As Double) As Long
    
Declare Function age1960_waitForClearHPIB Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal timeout As Long) As Long

Declare Function age1960_useSRQMAV Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal useSRQMAV As Integer) As Long
    
Declare Function age1960_useSRQMAV_Q Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByRef useSRQMAV As Integer) As Long
    
Declare Function age1960_PowerVsTimePlot_Q Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal pvsTimePlotArraySize As Long, _
    ByRef pvsTimePlotIntegrity As Long, _
    ByRef PvsTimePlotMaskFail As Double, _
    ByRef pvsTimePlotPower As Double, _
    ByRef pvsTimeStartTime As Double, _
    ByRef pvsTimeIncrement As Double, _
    ByRef pvsTimePlotArray As Double) As Long

Declare Function age1960_loopback Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal loopbackMode As Integer) As Long

Declare Function age1960_currentTA Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal TAName As String, _
    ByVal TARevision As String) As Long
     
Declare Function age1960_currentTA_Q Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal TANameQuery As String, _
    ByVal TARevisionQuery As String) As Long
    
Declare Function age1960_currentTAModel_Q Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal TAModel As String) As Long

Declare Function age1960_currentActiveTAP Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal TAName As String) As Long

Declare Function age1960_currentActiveTAP_Q Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal TANameQuery As String) As Long

Declare Function age1960_confAFAN Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal AFANMeasCount As Long, _
    ByVal AFANSinadDist As Integer, _
    ByVal AFANFundFreq As Double, _
    ByVal AFANFilterType As Integer, _
    ByVal AFANBPFCntFreq As Double, _
    ByVal AFANDetType As Integer, _
    ByVal AFANPeakVolt As Double, _
    ByVal AFANDeemphasis As Integer, _
    ByVal AFANExpandorLevel As Double, _
    ByVal AFANMaxTime As Double) As Long

Declare Function age1960_fetchAFAN_Q Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByRef AFANIntegrity As Long, _
    ByRef AFANAvgAudioLevel As Double, _
    ByRef AFANAvgSINAD As Double, _
    ByRef AFANAvgDist As Double) As Long

Declare Function age1960_readAFAN_Q Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal AFANAutoRange As Integer, _
    ByRef AFANIntegrity As Long, _
    ByRef AFANAvgAudioLevel As Double, _
    ByRef AFANAvgSINAD As Double, _
    ByRef AFANAvgDist As Double) As Long

Declare Function age1960_confPFER_CIFT Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal PFERCIFTState As Integer, _
    ByVal PFERConfidenceLevel As Double, _
    ByVal PFERPeakPhaseErrorMaxLimit As Double, _
    ByVal PFERRmsPhaseErrorMaxLimit As Double, _
    ByVal PFERFrequencyErrorMaxLimit As Double) As Long
    
Declare Function age1960_confORFSLimitSource Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal limitSource As Integer) As Long

Declare Function age1960_confPVTMask Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal PVTMaskForPCS As Integer) As Long

Declare Function age1960_confORFSSwitchLimits Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal measurementBand As Integer, _
    ByVal switchingOffsetPoints As Long, _
    ByRef switchingLimitsArray As Double) As Long

Declare Function age1960_confORFSModLimits Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal measurementBand As Integer, _
    ByVal modulationOffsetPoints As Long, _
    ByRef modulationLimitsArray As Double) As Long

Declare Function age1960_fetchORFSSummaryPassFail_Q Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByRef overallPFSummary As Double, _
    ByRef switchingPFSummary As Double, _
    ByRef modulationPFSummary As Double) As Long

Declare Function age1960_burstTimingError_Q Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByRef burstTimingError As Double) As Long


    
